fix: fix content header of h1 and button display

--- a/src/app/pages/home/bank-accounts/bank-accounts.component.css
+++ b/src/app/pages/home/bank-accounts/bank-accounts.component.css
@@ -50,8 +50,12 @@ li {
   margin-bottom: 1rem;
 }
 
+.content-header {
+  display: flex;
+  align-items: center;
+}
+
 .content-header h2 {
-  margin: 0;
   font-size: 1.5rem;
   align-items: center;
 }
