feat(sidenav): add navigation link and update menu for transaction page

--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -24,12 +24,12 @@
       </li>
       <li class="sidenav-nav-item">
         <a
-          [routerLink]="['/expenses']"
+          [routerLink]="['/transactions']"
           routerLinkActive="router-link-active"
           class="sidenav-nav-link"
         >
           <ng-icon class="sidenav-link-icon" name="tdesignMoneyFilled" />
-          <span class="sidenav-link-text" *ngIf="isExpanded">Despesas</span>
+          <span class="sidenav-link-text" *ngIf="isExpanded">Transações</span>
         </a>
       </li>
       <li class="sidenav-nav-item">
