fix(sidenav): ajust to bank accounts

--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -53,20 +53,7 @@
               >
                 <ng-icon class="sublevel-link-icon" name="mynaCircleSolid" />
                 <span class="sublevel-link-text" *ngIf="isExpanded"
-                  >Nova Empresa</span
-                >
-              </a>
-            </li>
-
-            <li class="sublevel-nav-item">
-              <a
-                [routerLink]="['/company/list']"
-                routerLinkActive="router-link-active"
-                class="sublevel-nav-link"
-              >
-                <ng-icon class="sublevel-link-icon" name="mynaCircleSolid" />
-                <span class="sublevel-link-text" *ngIf="isExpanded"
-                  >Listar Empresas</span
+                  >Contas Bancárias</span
                 >
               </a>
             </li>
