feat(default-input-button): add support for icons in input fields

--- a/src/app/components/default-input-button/default-input-button.component.html
+++ b/src/app/components/default-input-button/default-input-button.component.html
@@ -1,7 +1,16 @@
 <label [for]="inputName">{{ label }}</label>
-<input
-  [type]="type"
-  [placeholder]="placeholder"
-  [value]="value"
-  (input)="onInput($event)"
-/>
+<div class="input-content">
+  @if (icon) {
+  <div class="form-icon">
+    <ng-icon [name]="icon" style="font-size: 1.3rem"></ng-icon>
+  </div>
+  }
+  <input
+    [type]="type"
+    [placeholder]="placeholder"
+    [value]="value"
+    [id]="inputName"
+    (input)="onInput($event)"
+    class="input-field"
+  />
+</div>
