feat(default-login-layout): add finance highlight section with SVG illustration

--- a/src/app/components/default-login-layout/default-login-layout.component.html
+++ b/src/app/components/default-login-layout/default-login-layout.component.html
@@ -17,8 +17,11 @@
       {{ registerButtonText }}
     </button>
   </section>
-  <section>
-    <h1>Controll your finance now!</h1>
-    <img src="" alt="" />
+  <section class="finance-highlight">
+    <h1><span>Controle </span> suas finanças agora!</h1>
+    <img
+      src="assets/images/undraw_online-banking_l9sn.svg"
+      alt="Finance illustration"
+    />
   </section>
 </main>
