--- a/src/app/pages/signup/signup.component.css
+++ b/src/app/pages/signup/signup.component.css
@@ -1,5 +1,6 @@
 form {
   width: 100%;
-  gap: 24px;
-  /* background-color: antiquewhite; */
+  gap: 1.5rem;
+  display: flex;
+  flex-direction: column;
 }
